Prevent username wrapping

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -20,6 +20,7 @@
   font-size: 24px;
   margin: 0px;
   line-height: 0px;
+  white-space: nowrap;
 }
 
 .tweet-handle {
